--- a/JS23-04-13 Duy Cường nâng cao/index.css
+++ b/JS23-04-13 Duy Cường nâng cao/index.css
@@ -179,4 +179,12 @@ footer h4{
     border: 2px solid black;
     margin-top: 20px;
   }
+     footer{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-content{
+    width: 40%;
+    margin-top: 20px;
+  }
 }
